k8s/kube-system/cilium/ingress-hubble.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hubble-ui
  namespace: kube-system
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header Accept-Encoding "";
      sub_filter '<base href="/"' '<base href="/hubble/"';
      sub_filter_once on;
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /hubble(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: hubble-ui
                port:
                  number: 80
